<resources>
    <string name="app_name">RNE Pruebas Nacionales</string>
    <string name="tut1">La mejor aplicacion para recordar tu RNE de las pruebas nacionales</string>
    <string name="title_activity_formulario">formulario</string>
    <string name="rne_detail">Detalle de RNE</string>
    <string name="action_settings">Settings</string>
    <string name="segundo_apellido">Segundo Apellido</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="primer_nombre">Primer Nombre</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="copiado">Copiado</string>
    <string name="alertaVacio">Lo sentimos, el unico campo que puede estar vacio es el <b>segundo apellido</b>. \n en caso de que no tengas, pero debes ingresar todos los campos obligatorios como primer nombre, primer apellido y fecha.</string>
    <string name="aviso2doApellidp">1. Ninguno de los datos utilizados en esta aplicacion son recopilados para uso de <b>terceros</b>.\n\n 2. Recordar que si tienes solo un <b>apellido</b>, no es necesario rellenar el campo de <b>segundo apellido</b>.\n\n 3. Lee y acepta las politicas de privacidad y manejo de datos:</string>
    <string name="rne_almacenados">RNE Almacenados</string>
    <string name="rne">RNE: CMC010125001</string>
    <string name="ctc0101250001">CTC0101250001</string>
    <string name="_10_10_2001">10-10-2001</string>
    <string name="carlos_mejia">Carlos Mejia</string>
    <string name="adTest">ca-app-pub-3305890673634429/3429688599</string>
    <string name="anuncioPantallaCompleta">ca-app-pub-3305890673634429/2142142170</string>
    <string name="adApp">ca-app-pub-3305890673634429~7050161997</string>
    <string name="pantallacompletaejemplo">ca-app-pub-3940256099942544/1033173712</string>
    <string name="adAppEjemplo">ca-app-pub-3940256099942544~3347511713</string>
    <string name="bannerejemplo">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Banner">BANNER</string>
    <string name="unityGameID">4056667</string>
    <string name="nombre_estudiante">Nombre del Estudiante:</string>
    <string name="codigo_estudiantil_rne">Codigo Estudiantil (RNE):</string>
    <string name="fecha_de_nacimientoa">Fecha de Nacimiento:</string>
    <string name="fecha_de_creacion_rne">Fecha de Creacion RNE:</string>
</resources>