<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RNEDetail"
    tools:ignore="SpeakableTextPresentCheck"
    tools:showIn="@layout/activity_rnedetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_estudiante"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/nombreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginBottom="15dp"
            android:textIsSelectable="true"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/codigo_estudiantil_rne"
            android:textAllCaps="false"
            android:textSize="24sp"
            tools:ignore="DuplicateIds" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rneTextView"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:layout_marginBottom="15dp"
                android:textIsSelectable="true"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/copiarImg"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#37000000"
                app:srcCompat="?attr/actionModeCopyDrawable" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/fecha_de_nacimientoa"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fechaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginBottom="15dp"
            android:textIsSelectable="true"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/fecha_de_creacion_rne"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fechaRneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginBottom="15dp"
            android:textIsSelectable="true"/>
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/compartirBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="Compartir"
                android:textColor="#FFFFFF"
                android:textSize="12dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/resultadosBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Resultados"
                android:textSize="12dp"
                android:layout_marginRight="10dp"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/eliminarBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12dp"
                android:text="Eliminar"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"/>


        </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>